--- a/index.html
+++ b/index.html
@@ -299,6 +299,8 @@
         <img class="title-line-sp" src="img/line1-sp.png" alt="">
       </div>
       <div class="inner">
+        <img class="maker-arrows maker-arrow1" src="img/arrow2.png" alt="">
+        <img class="maker-arrows maker-arrow2" src="img/arrow2.png" alt="">
         <ul class="maker-slide">
           <li>
             <img src="img/com1.png" alt="">
@@ -314,13 +316,7 @@
             </p>
             <img class="maker-img" src="img/3.png" alt="">
           </li>
-          <li>
-            <img src="img/com2.png" alt="">
-            <h3 class="maker-subtitle"><span class="maker-tag">福井県</span>爽緑農園　太田紘一</h3>
-            <p class="maker-tex">「爽緑農園」では農薬や除草剤は一切使用せず、一つ一つのお野菜を丁寧に栽培しています。お日様の光をたくさん浴びて育ったお野菜は、葉や皮まで余すことなく食べることができます。
-            </p>
-            <img class="maker-img" src="img/3.png" alt="">
-          </li>
+          
         </ul>
       </div>
     </section>
@@ -341,7 +337,9 @@
 
         <ul class="voice-slide">
           <li>
-            <div class="voice-slide-inner">
+            <img class="person" src="img/person1.png" alt="">
+            <img class="person-sp" src="img/person-sp.png" alt="">
+            <!-- <div class="voice-slide-inner">
               <div class="voice-titlebox">
                 <img src="img/voice_01_pc.png" alt="">
                 <div class="voice-subtitle">
@@ -357,11 +355,12 @@
                   <span class="mark">ゆでただけでも、野菜の甘みが優しく広がり、本来の味</span>がたのしめます。
                 </p>
               </div>
-            </div>
+            </div> -->
           </li>
 
           <li>
-            <div class="voice-slide-inner">
+            <img class="person" src="img/person2.png" alt="">
+            <!-- <div class="voice-slide-inner">
               <div class="voice-titlebox">
                 <img src="img/voice_02_pc.png" alt="">
                 <div class="voice-subtitle">
@@ -377,11 +376,12 @@
                   小さな子供や働き盛りの夫など、<span class="mark">健康に気を遣って食から体づくりをしたい</span>我が家には、もう手放せない野菜となっています。
                 </p>
               </div>
-            </div>
+            </div> -->
           </li>
 
           <li>
-            <div class="voice-slide-inner">
+            <img class="person" src="img/person3.png" alt="">
+            <!-- <div class="voice-slide-inner">
               <div class="voice-titlebox">
                 <img src="img/voice_03_pc.png" alt="">
                 <div class="voice-subtitle">
@@ -398,7 +398,7 @@
                   たまにスーパーに並ばないような珍しい野菜がまざるのも、わくわくしますね。
                 </p>
               </div>
-            </div>
+            </div> -->
           </li>
         </ul>
       </div>
